--- a/pages/personal/personal.wxml
+++ b/pages/personal/personal.wxml
@@ -1,21 +1,21 @@
 <view class="content gray-content">
    <view class='user-info' style="background-image:url({{topBg}})">
-       <view class='avatar'><imgBox src='{{userInfo.avatarUrl}}'></imgBox></view>
+       <view class='avatar'><imgBox src='{{userInfo.avatarurl}}'></imgBox></view>
       
        <view class='info' wx-if="{{isLogin}}">
-          <view class='info-name'>{{userInfo.nickName}}</view>
-          <view class='info-id'>ID : {{userInfo.gender}}</view>
+          <view class='info-name'>{{userInfo.nickname}}</view>
+          <view class='info-id'>ID : {{userInfo.id}}</view>
            <view class='info-like'><text>收到赞 1</text> <text>送出赞 x</text></view>
        </view>
        <view class='info' wx-if="{{!isLogin}}">
-          <view class='info-name'>未登录</view>
+          <view class='info-name'>未登录,点击登录</view>
           <view class='info-id'>ID : {{userInfo.id}}</view>
            <view class='info-like'><text>收到赞 1</text> <text>送出赞 x</text></view>
        </view>
    </view>
      
   <view class='user-notice list'>
-      <view class='item' bindtap='toRemind' data-name="我收到的赞和评论" data-url="remind" ><text class=' left iconfont icon-tixing'></text> <text class='main'>提醒</text> <text class='iconfont icon-fenxiang-tianchong right '></text></view>
+      <view class='item remind' bindtap='toRemind' data-name="我收到的赞和评论" data-url="remind" ><text class=' left iconfont icon-tixing'></text> <text class='main'>提醒</text> <text class='right' hidden='{{noticeCount == "0"}}'>{{noticeCount}}</text></view>
 
   </view>
   <view class='user-bless list'>
