--- a/components/cc_loadMore/cc_loadMore.wxml
+++ b/components/cc_loadMore/cc_loadMore.wxml
@@ -1,4 +1,4 @@
  <view class='loadMore' catchtap='loading'>
- <text hidden='{{isLoadAll||isLoading}}' class='iconfont icon-fenxiang-tianchong'>更多</text><text hidden='{{!isLoadAll}}'>加载完毕</text><text hidden='{{!isLoading}}' class='iconfont icon-shezhi'>loading</text>
+ <text hidden='{{isLoadAll||isLoading}}' class='iconfont icon-fenxiang-tianchong'>更多</text><text hidden='{{!isLoadAll}}'>暂无更多</text><text hidden='{{!isLoading}}' class='iconfont icon-shezhi'>loading</text>
  
  </view>
