--- a/pages/personal/personal.wxml
+++ b/pages/personal/personal.wxml
@@ -15,16 +15,17 @@
    </view>
      
   <view class='user-notice list'>
-      <view class='item remind' bindtap='toRemind' data-name="我收到的赞和评论" data-url="remind" ><text class=' left iconfont icon-tixing'></text> <text class='main'>提醒</text> <text class='right' hidden='{{noticeCount == "0"}}'>{{noticeCount}}</text></view>
+      <view class='item remind' bindtap='toRemind' data-name="我收到的赞和评论" data-url="remind" ><text class=' left iconfont icon-tixing'></text> <text class='main'>提醒</text> <text class='right' wx:if='{{noticeCount}}'>{{noticeCount}}</text></view>
 
   </view>
   <view class='user-bless list'>
-  <view class='item' bindtap='toPage' data-name="收到的祝福" data-url="receive" data-column="2"><text class='left iconfont icon-iconset0173-copy'></text> <text class='main'>收到的祝福</text> <text class='iconfont icon-jiantou right '></text></view>
-    <view class='item' bindtap='toPage' data-name="送出的祝福" data-url="send" data-column="2"><text class=' left iconfont icon-iconset0173'></text> <text class='main'>送出的祝福</text> <text class='iconfont icon-jiantou right '></text></view>
+  <view class='item' bindtap='toPage' data-name="收到的祝福" data-url="viewBlessings" data-column="2"><text class='left iconfont icon-iconset0173-copy'></text> <text class='main'>收到的祝福</text> <text class='iconfont icon-jiantou right '></text></view>
+    <view class='item' bindtap='toPage' data-name="送出的祝福" data-url="myBlessings" data-column="2"><text class=' left iconfont icon-iconset0173'></text> <text class='main'>送出的祝福</text> <text class='iconfont icon-jiantou right '></text></view>
   </view>
-  <view class='user-reward list'>
+
+  <!-- <view class='user-reward list'>
    <view class='item' bindtap='toPage' data-name="我的红包" data-url="redpacket" data-column="3"><text class=' left iconfont icon-icon-test1'></text> <text class='main'>我的红包</text> <text class='iconfont icon-jiantou right '></text></view>
     <view class='item' bindtap='toPage' data-name="我的卡券" data-url="cart" data-column="3"><text class=' left iconfont icon-qiaquan'></text> <text class='main'>我的卡券</text> <text class='iconfont icon-jiantou right '></text></view>
-  </view>
+  </view> -->
 
 </view>
