--- a/pages/rank/rank.wxml
+++ b/pages/rank/rank.wxml
@@ -3,7 +3,7 @@
      
      <modelT height='25vh' mark='rank' lefttext="规则" righttext="分享" bgsrc="http://dev.guotu.zsylife.cn/minidata/rankbg.png" bind:rightclick='r' bind:leftclick='showRule'></modelT>
      <view class='rank-list'>
-        <view class='item my-rank'>我收到de点赞总数</view>
+        <view class='item my-rank'>我现在de排名：{{my_rank}}</view>
         <scroll-view scroll-y class='scroll'>
         <view class='item' wx:for="{{listData}}"  wx:key="rankList">
           <template is='rankItem' data="{{item}}"></template>  
